--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,25 +6,125 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
-    <height>600</height>
+    <width>400</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Quiz Game</string>
   </property>
-  <widget class="QWidget" name="centralwidget"/>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>800</width>
-     <height>22</height>
-    </rect>
-   </property>
+  <widget class="QWidget" name="centralwidget">
+   <widget class="QLineEdit" name="ipLineEdit">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>20</y>
+      <width>200</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="placeholderText">
+     <string>Enter IP address</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="createGameButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>60</y>
+      <width>120</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Create Game</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="joinGameButton">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>60</y>
+      <width>120</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Join Game</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="startGameButton">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>100</y>
+      <width>120</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Start Game</string>
+    </property>
+   </widget>
+   <widget class="QPushButton" name="answerButton">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>100</y>
+      <width>120</width>
+      <height>30</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Send Answer</string>
+    </property>
+   </widget>
+   <widget class="QGroupBox" name="answerGroup">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>150</y>
+      <width>260</width>
+      <height>110</height>
+     </rect>
+    </property>
+    <property name="title">
+     <string>Answers</string>
+    </property>
+    <widget class="QRadioButton" name="answer1RadioButton">
+     <property name="text">
+      <string>Answer 1</string>
+     </property>
+     <property name="geometry">
+      <rect><x>10</x><y>20</y><width>100</width><height>20</height></rect>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="answer2RadioButton">
+     <property name="text">
+      <string>Answer 2</string>
+     </property>
+     <property name="geometry">
+      <rect><x>130</x><y>20</y><width>100</width><height>20</height></rect>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="answer3RadioButton">
+     <property name="text">
+      <string>Answer 3</string>
+     </property>
+     <property name="geometry">
+      <rect><x>10</x><y>60</y><width>100</width><height>20</height></rect>
+     </property>
+    </widget>
+    <widget class="QRadioButton" name="answer4RadioButton">
+     <property name="text">
+      <string>Answer 4</string>
+     </property>
+     <property name="geometry">
+      <rect><x>130</x><y>60</y><width>100</width><height>20</height></rect>
+     </property>
+    </widget>
+   </widget>
   </widget>
-  <widget class="QStatusBar" name="statusbar"/>
  </widget>
  <resources/>
  <connections/>
